--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #F8512F
 }
 
+.white-text {
+  color: #fff;
+}
+
 .raleway-text {
   font-family: 'Raleway', sans-serif;
 }
@@ -104,4 +108,28 @@ h1, h2, h3, h4, h5, h6 {
   color: rgba(0, 0, 0, .07);
   z-index: 0;
   font-family: 'Playfair Display', serif;
+}
+
+/*Review section*/
+#review{
+  background-image: url("../img/food_review.jpg");
+  height: 450px;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+#review-background {
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top: 163px;
+  padding: 10px 0px;
+  text-shadow: 1px 1px rgba(0, 0, 0, .5);
+}
+
+#review-background h3 {
+  font-size: 50px;
+}
+
+#review-background p {
+  font-size: 18px;
 }
