--- a/css/styles.css
+++ b/css/styles.css
@@ -134,4 +134,31 @@ h1, h2, h3, h4, h5, h6 {
 #review-background p {
   font-size: 18px;
 }
- /*Putting in an extra line so I can show a difference between master and review branches*/
+
+/*Menue Scetion*/
+#menu-section {
+  background-image: url('../img/black_linen.png');
+  background-size: cover;
+  background-position: center;
+  height: 650px;
+}
+#menu-section h1 {
+  font-size: 60px
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover, #menu-section ul li a {
+  color: #F8512F;
+  text-transform: uppercase;
+}
+
+.nav-tabs>li.active>a:hover, .nav>li>a:focus, .nav>li>a:hover{
+  background-color: rgba(0, 0, 0, .25);
+}
+
+.nav-tabs.nav-justified>.active>a, .nav-tabs.nav-justified>.active>a:focus, .nav-tabs.nav-justified>.active>a:hover, .nav-tabs>li>a:hover {
+  border: none;
+}
+
+.food-item {
+  background-color: #fff;
+}
